--- a/package.json
+++ b/package.json
@@ -24,17 +24,18 @@
     }
   ],
   "dependencies": {
-    "express": "~4.10.6"
+    "express": "~4.10.6",
+    "express-access-control": "~1.0.0"
   },
   "devDependencies": {
     "nimble": "0.0.2",
     "nodeunit": "~0.9.0",
     "express-session": "~1.10.1",
     "express-session-mongodb": "~1.3.2",
-    "user-store": "~1.1.1",
+    "user-store": "~1.2.0",
     "body-parser": "~1.10.2",
     "mongodb": "~1.4.29",
-    "express-user-local": "0.0.1-alpha.1"
+    "express-user-local": "0.0.1-alpha.2"
   },
   "license": "MIT",
   "directories": {
