--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "express-user",
-  "version": "0.0.1-alpha.7",
+  "version": "0.0.1-alpha.8",
   "description": "Ressource Oriented Express Middleware to Manage Users.",
   "keywords": [
     "Express",
@@ -35,7 +35,9 @@
     "user-store": "~1.2.0",
     "body-parser": "~1.10.2",
     "mongodb": "~1.4.30",
-    "express-user-local": "0.0.1-alpha.3"
+    "express-user-local": "0.0.1-alpha.3",
+    "express-brute": "~0.5.2",
+    "express-brute-mongo": "~0.1.0"
   },
   "license": "MIT",
   "directories": {
