--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "express-user",
-  "version": "0.0.1-alpha.15",
+  "version": "1.0.0",
   "description": "Ressource Oriented Express Middleware to Manage Users.",
   "keywords": [
     "Express",
@@ -24,15 +24,21 @@
     }
   ],
   "dependencies": {
-    "express": "~4.10.6",
-    "express-access-control": "~1.0.0"
+    "express": "~4.10.6"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "body-parser": "^1.12.2",
+    "express-session": "^1.10.4",
+    "express-session-mongodb": "^1.3.3",
+    "mongodb": "^1.4.35",
+    "nodeunit": "~0.9.0",
+    "user-store": "^1.3.0"
+  },
   "license": "MIT",
   "directories": {
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/nodeunit/bin/nodeunit test"
   }
 }
