--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "express-user",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Ressource Oriented Express Middleware to Manage Users.",
   "keywords": [
     "Express",
@@ -32,7 +32,8 @@
     "express-session-mongodb": "^1.3.3",
     "mongodb": "^1.4.35",
     "nodeunit": "~0.9.0",
-    "user-store": "^1.3.0"
+    "user-properties": "^3.1.0",
+    "user-store": "^2.0.0"
   },
   "license": "MIT",
   "directories": {
