--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     }
   ],
   "dependencies": {
-    "express": "~4.10.6"
+    "express": ">=4.10.6 <5.x.x"
   },
   "devDependencies": {
     "body-parser": "^1.12.2",
